RESOLVED FIXED152945
REGRESSION (r194426): First email field is not autofilled on amazon.com
https://bugs.webkit.org/show_bug.cgi?id=152945
Summary REGRESSION (r194426): First email field is not autofilled on amazon.com
Attachments
Patch (2.12 KB, patch)
2016-01-09 09:41 PST, alan
no flags
Patch (4.45 KB, patch)
2016-01-09 15:05 PST, alan
no flags
alan
Comment 1 2016-01-09 09:18:05 PST
alan
Comment 2 2016-01-09 09:41:54 PST
Simon Fraser (smfr)
Comment 3 2016-01-09 10:38:55 PST
Comment on attachment 268622 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=268622&action=review > Source/WebCore/ChangeLog:11 > + Unable to test. Needs Safari autofill interaction. This is a shame. Can't you simulate it with two text fields? > Source/WebCore/page/FrameView.cpp:2651 > + // We already have a pending (full) layout. Just mark the subtree for layout. I can't see how you know you have a pending layout here.
alan
Comment 4 2016-01-09 14:05:35 PST
(In reply to comment #3) > Comment on attachment 268622 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=268622&action=review > > > Source/WebCore/ChangeLog:11 > > + Unable to test. Needs Safari autofill interaction. > > This is a shame. Can't you simulate it with two text fields? I might. > > > Source/WebCore/page/FrameView.cpp:2651 > > + // We already have a pending (full) layout. Just mark the subtree for layout. > > I can't see how you know you have a pending layout here. We early return from this function when layout is pending.
alan
Comment 5 2016-01-09 15:05:54 PST
WebKit Commit Bot
Comment 6 2016-01-09 16:39:12 PST
Comment on attachment 268629 [details] Patch Clearing flags on attachment: 268629 Committed r194823: <http://trac.webkit.org/changeset/194823>
WebKit Commit Bot
Comment 7 2016-01-09 16:39:16 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.