REGRESSION (r194426): First email field is not autofilled on amazon.com https://bugs.webkit.org/show_bug.cgi?id=152945 <rdar://problem/24082914>

Reviewed by Simon Fraser.

r194426 missed marking the m_layoutRoot for layout while converting to full layout (it only marked the new layout root).

Source/WebCore:

Test: fast/forms/multiple-subtree-layout-failure.html

* page/FrameView.cpp:
(WebCore::FrameView::scheduleRelayoutOfSubtree):

LayoutTests:

* fast/forms/multiple-subtree-layout-failure-expected.html: Added.
* fast/forms/multiple-subtree-layout-failure.html: Added.


Canonical link: https://commits.webkit.org/171032@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194823 268f45cc-cd09-0410-ab3c-d52691b4dbfc